--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,35 @@
 ---
-title: Projects
-layout: home
+layout: project
+type: project
+image: img/micromouse/micromouse-square.jpg
+title: "VIP University of Hawaiʻi Drone Technologies"
+date: 2019
+published: true
+labels:
+  - Robotics
+  - Raspberry Pi
+  - Unmanned Aerial Vehicles
+summary: "My team developed a quadcopter capable of autonomous flight for the AUVSI SUAS competition."
 ---
 
-{% include projects/projects.html %}
+<div class="text-center p-4">
+  <img width="200px" src="../img/micromouse/micromouse-robot.png" class="img-thumbnail" >
+  <img width="200px" src="../img/micromouse/micromouse-robot-2.jpg" class="img-thumbnail" >
+  <img width="200px" src="../img/micromouse/micromouse-circuit.png" class="img-thumbnail" >
+</div>
+
+
+
+```cpp
+byte ADCRead(byte ch)
+{
+    word value;
+    ADC1SC1 = ch;
+    while (ADC1SC1_COCO != 1)
+    {   // wait until ADC conversion is completed   
+    }
+    return ADC1RL;  // lower 8-bit value out of 10-bit data from the ADC
+}
+```
+
+You can learn more at the [UH Micromouse News Announcement](https://manoa.hawaii.edu/news/article.php?aId=2857).
