Update and rename index.html to drone.html

--- a/projects/drone.html
+++ b/projects/drone.html
@@ -13,9 +13,8 @@ summary: "My team developed a quadcopter capable of autonomous flight for the AU
 ---
 
 <div class="text-center p-4">
-  <img width="200px" src="../img/micromouse/micromouse-robot.png" class="img-thumbnail" >
-  <img width="200px" src="../img/micromouse/micromouse-robot-2.jpg" class="img-thumbnail" >
-  <img width="200px" src="../img/micromouse/micromouse-circuit.png" class="img-thumbnail" >
+  <img width="200px" src="../img/Copy of DroneTechnologies.png" class="img-thumbnail" >
+  
 </div>
 
 
