--- a/projects/drone.html
+++ b/projects/drone.html
@@ -1,34 +1,6 @@
 ---
-layout: project
-type: project
-image: img/micromouse/micromouse-square.jpg
-title: "VIP University of Hawaiʻi Drone Technologies"
-date: 2019
-published: true
-labels:
-  - Robotics
-  - Raspberry Pi
-  - Unmanned Aerial Vehicles
-summary: "My team developed a quadcopter capable of autonomous flight for the AUVSI SUAS competition."
+title: Projects
+layout: home
 ---
 
-<div class="text-center p-4">
-  <img width="200px" src="../img/Copy of DroneTechnologies.png" class="img-thumbnail" >
-  
-</div>
-
-
-
-```cpp
-byte ADCRead(byte ch)
-{
-    word value;
-    ADC1SC1 = ch;
-    while (ADC1SC1_COCO != 1)
-    {   // wait until ADC conversion is completed   
-    }
-    return ADC1RL;  // lower 8-bit value out of 10-bit data from the ADC
-}
-```
-
-You can learn more at the [UH Micromouse News Announcement](https://manoa.hawaii.edu/news/article.php?aId=2857).
+{% include projects/projects.html %}
